--- a/src/db.properties
+++ b/src/db.properties
@@ -1,3 +1,4 @@
-db.url=jdbc:sqlserver://MSI\\SQLEXPRESS:1433;databaseName=QuanLyThuVien;encrypt=true;trustServerCertificate=true
+
+db.url=jdbc:sqlserver://localhost:1433;databaseName=QuanLyNhaThuoc;encrypt=true;trustServerCertificate=true
 db.username=sa
 db.password=123456
