--- a/src/db.properties
+++ b/src/db.properties
@@ -1,3 +1,3 @@
 db.url=jdbc:sqlserver://localhost:1433;databaseName=QuanLyNhaThuoc;encrypt=true;trustServerCertificate=true
-db.username=javauser
+db.username=sa
 db.password=123456
